--- a/css/secciones.css
+++ b/css/secciones.css
@@ -141,6 +141,20 @@ h6 {
   border-bottom: 2px solid #fff;
 }
 
+.menu-impresos a{
+  margin: 0 20px;
+  color: #000;
+  padding-bottom: 9px;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+  font-size: 1em;
+}
+
+.menu-impresos a:hover{
+  border-bottom: 2px solid #000;
+}
+
 .tit-des{
   color: #fff;
 }
